--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "terser": "3.14.1"
   },
   "devDependencies": {
-    "vuepress": "^0.14.10",
+    "vuepress": "0.14.10",
     "webpack": "4.8.1"
   }
 }
