--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week",
+  "name": "weekly",
   "version": "1.0.0",
   "scripts": {
     "dev": "vuepress dev docs",
@@ -10,6 +10,6 @@
   },
   "devDependencies": {
     "vuepress": "0.14.10",
-    "webpack": "4.29.6"
+    "webpack": "4.8.1"
   }
 }
